package CarSharing.entities;

public abstract class Rate {

    public Rate() {
    }

    public abstract int total(Trip trip);
}
